--- a/earthquake-prediction/python-service/Dockerfile
+++ b/earthquake-prediction/python-service/Dockerfile
@@ -1,6 +1,11 @@
 # Use Python 3.10 as base image
 FROM python:3.10-slim
 
+# 1) Install curl so the healthcheck can run
+RUN apt-get update \
+ && apt-get install -y --no-install-recommends curl \
+ && rm -rf /var/lib/apt/lists/*
+
 # Set working directory
 WORKDIR /app
 
@@ -9,6 +14,8 @@ COPY requirements.txt .
 
 # Install dependencies
 RUN pip install --no-cache-dir -r requirements.txt
+
+
 
 # Copy the rest of the application
 COPY . .
